# VideoAnnotator

./: -Coding.gitignore  .dockerignore.dev  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BATCH_PROCESSING_PLAN.md  BATCH_TESTING_GUIDE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_QUALITY_REPORT.md  CONTRIBUTING.md  CRITICAL_FIXES_COMPLETE.md  DEMO_COMMANDS_IMPROVED.md  Dockerfile  Dockerfile.cpu  Dockerfile.dev  Dockerfile.gpu  Dockerfile.oldgpu  FOSS_LIBRARY_MIGRATION_PLAN.md  FOSS_LIBRARY_MIGRATION_REPORT.md  HOUSEKEEPING_COMPLETE.md  INSTALLATION.md  LAION_IMPLEMENTATION_PLAN.md  LAION_VOICE_PIPELINE_REFACTORING.md  LICENSE  Makefile  PHASE2_CLEANUP_PLAN.md  PHASE_2_COMPLETE_SUMMARY.md  README.md  ROADMAP.md  SCENE_PIPELINE_MIGRATION_COMPLETE.md  SCHEMA_ANALYSIS_REPORT.md  SECURITY.md  SPEECH_PIPELINE_REFACTORING.md  STAGE3_IMPLEMENTATION_SUMMARY.md  STANDARDS_MIGRATION_COMPLETE.md  TESTING_OVERVIEW.md  (+53 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json  noop.txt
.github/ISSUE_TEMPLATE/: api-results-not-returned.md  missing-dependencies.md  npm-installation-errors.md  permission-issues.md  speaker-diarization-auth.md  speech-recognition-segfault.md
.github/prompts/: speckit.implement.prompt.md  speckit.plan.prompt.md
.github/workflows/: ci-cd.yml
.specify/: feature.json
.specify/memory/: constitution.md
LookitLaughter.test/: _LookitLaughter.test.xlsx  _LookitLaughter.xlsx
code/: 00_ca_demo_methods.ipynb  01_ca_extract_movement.ipynb  01_ca_extract_movement_and_audio.ipynb  02_ca_extract_speech.ipynb  02_ca_extract_speech_and_laughter.ipynb  03_ca_extract_facial_data.ipynb  04_ca_extract_object_data.ipynb  05_ca_extract_video_understanding.ipynb  06_ca_clean_label_actors_remove_ghosts.ipynb  06_ca_visualise_data_manual_annotation.ipynb  07_ca_visualise_data.fifityone.ipynb  07_ca_visualise_data.ipynb  08_ca_classifying_joke_types.ipynb  08_ca_visualise_data .labelstudio copy.ipynb  08_ca_visualise_data .labelstudio.ipynb  09_ca_classify_fiftyone.ipynb  09_ca_classifying_joke_types.ipynb  README.md  calcs.py  convertvideos.ipynb  display.py  fiftyonedemo.ipynb  temp.ipynb  utils.py
code/tests/: test_calcs-Coding.py  test_calcs.py
configs/: README.md  default.yaml  high_performance.yaml  laion_pipelines.yaml  lightweight.yaml  openface3.yaml  openface3_complete.yaml  person_identity.yaml
data/: Data Formats.md
data/0_external/: README.md
data/0_raw/: README.md
data/1_interim/: README.md
data/2_final/: README.md
data/demo/: 2UWdXP.joke1.rep2.take1.Peekaboo.csv  README-Coding.md  README.md
docs/: CLIENT_TEAM_UPDATE.md  CLIENT_TOKEN_SETUP_GUIDE.md  CORS_IMPROVEMENTS_OCT2025.md  GETTING_STARTED.md  GETTING_STARTED_REVIEWERS.md  Installation.md  LAION_IMPLEMENTATION_PLAN.md  LEGACY_Tech_Specs.md  OPENFACE3_GUIDE.md  OPENFACE3_INSTALLATION.md  OPENFACE3_INTEGRATION_SUCCESS.md  OUTPUT_FORMATS.md  PYCOCOTOOLS_INTEGRATION_PLAN.md  Pipeline Specs.md  README.md  SCHEMA_REVIEW.md  SCHEMA_STANDARDS_STRATEGY.md  SIZE_BASED_ANALYSIS.md  Scene Detection.md  TECHNICAL_SPECIFICATION.md  TESTING_STANDARDS.md  TROUBLESHOOTING.md  UPGRADE_TO_LATEST_VERSIONS.md  diarization_pipeline.md  index.md  joss.md  locale.md  pipelines_spec.md  versioning.md
docs/archive/: Demo_Commands.md  Demo_Commands_Improved.md  Environment_Setup.md  Getting_Started.md  Installation.md  JOSS_VIEWER_HANDOVER.md  LAION_Integration.md  PersonID_Implementation_Guide.md  README.md  ROADMAP.md  SCHEMA_REVIEW.md  Technical_Specification.md  batch_processing_plan_v1.1.2.md  diarization_implementation_v1.1.2.md  index.md  (+5 more)
examples/: README.md  basic_video_processing.py  batch_processing.py  custom_pipeline_config.py  diarization_example.py  size_based_analysis_demo.py  test_individual_pipelines.py  test_laion_voice_pipeline.py
notebooks/: 01_ca_extract_movement_and_audio.ipynb  02_ca_extract_speech_and_laughter.ipynb  03_ca_extract_facial_data.ipynb  04_ca_extract_object_data.ipynb  Empathic_Insight_Face_Large.ipynb  Empathic_Insight_Face_Small.ipynb  Empathic_Insight_Voice.ipynb  test.csv
paper/: checklist.md  cover_letter.md  paper.bib  paper.md  release_note_v1.4.2.md
pipelines/: README.md
reports/: pydocstyle_by_code.txt  pydocstyle_by_file.txt  pydocstyle_raw.txt  pydocstyle_summary.md
scripts/: auto_fix_pydocstyle.py  batch_process_videos.py  browser_debug_console.js  create_github_issues_from_templates.py  debug_load_job.py  demo_openface.py  demo_openface_comprehensive.py  demo_openface_only.py  demo_person_id.py  demo_phase2_integration.py  generate_pipeline_specs.py  install_hadolint.sh  label_persons.py  manage_tokens.py  process_facial_data.py  run_size_based_analysis.py  submit_extract_movement.py  submit_video_understanding.py  test_all.py  test_api_quick.py  test_diarization.py  test_fast.py  test_integration.py  test_logging.py  test_openface3.py  test_openface_installation.py  test_openface_integration.py  test_person_id.py  test_pipeline_integration.py  test_pipelines.py  verify_installation.py  verify_openface_installation.py
serve/: README.md
src/: __init__.py  cli.py  config.py  main.py  version.py
tests/: RATIONALIZATION_COMPLETE.md  README.md  TESTING_STRUCTURE_UPDATE.md  __init__.py  conftest.py  test_all_pipelines.py  test_audio_individual_components.py  test_audio_pipeline.py  test_audio_speech_pipeline.py  test_batch_integration.py  test_batch_orchestrator.py  test_batch_recovery.py  test_batch_storage.py  test_batch_types.py  test_face_pipeline.py  test_face_pipeline_modern.py  test_face_pipeline_new.py  test_integration_simple.py  test_laion_voice_pipeline.py  test_person_pipeline.py  test_person_pipeline_modern.py  test_person_tracking_size_analysis.py  test_phase2_integration.py  test_pipelines.py  test_pipelines_new.py  test_progress_tracker_real.py  test_recovery_real.py  test_scene_pipeline.py  test_scene_pipeline_modern.py  test_schemas.py  test_simple_schemas.py  test_stage_summary.py  test_standards_compatibility.py  test_whisper_base_pipeline_stage1.py
tokens/: encryption.key  tokens.json
(+356 files in other folders)
